cmake_minimum_required(VERSION 3.11)

add_executable(1a 1a.cpp)
add_executable(1b 1b.cpp)

add_executable(2a 2a.cpp)
add_executable(2b 2b.cpp)

add_executable(3a 3a.cpp)
add_executable(3b 3b.cpp)

add_executable(4a 4a.cpp)
add_executable(4b 4b.cpp)

add_executable(5a 5a.cpp)
add_executable(5b 5b.cpp)

add_executable(6a 6a.cpp)
add_executable(6b 6b.cpp)
